--- a/FiscaliZi.Colinfo/Views/Coleta.xaml
+++ b/FiscaliZi.Colinfo/Views/Coleta.xaml
@@ -180,7 +180,11 @@
                                 <materialDesign:PackIcon Kind="{Binding Text, ElementName=txtSituacao, Converter={StaticResource SituacaoCNPJIconConverter}}" 
                                                          VerticalAlignment="Center" 
                                                          Foreground="{Binding Text, ElementName=txtSituacao, Converter={StaticResource SituacaoCNPJColorConverter}}" Margin="0,0,5,0"/>
-                                <TextBlock x:Name="txtSituacao" Text="{Binding Converter={StaticResource SitCadastroClienteConverter}}" VerticalAlignment="Center" Width="60"/>
+                                <TextBlock 
+                                    x:Name="txtSituacao" 
+                                    Text="{Binding Converter={StaticResource SitCadastroClienteConverter}}" 
+                                    VerticalAlignment="Center" 
+                                    Width="63"/>
                                 <Button 
                                     Style="{DynamicResource MaterialDesignToolButton}"
                                     Height="25" Width="40"
