--- a/FiscaliZi.Colinfo/MainWindow.xaml
+++ b/FiscaliZi.Colinfo/MainWindow.xaml
@@ -3,20 +3,21 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                   
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"       
-                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"        
-                   xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls" 
-                   xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
-                   xmlns:dockablz="clr-namespace:Dragablz.Dockablz;assembly=Dragablz"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"        
+    xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls" 
+    xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
+    xmlns:dockablz="clr-namespace:Dragablz.Dockablz;assembly=Dragablz"
     xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
-                   xmlns:local="clr-namespace:FiscaliZi.Colinfo" 
-                   xmlns:views="clr-namespace:FiscaliZi.Colinfo.Views"
-                   xmlns:materialDesignMahApps="http://materialdesigninxaml.net/winfx/xaml/themes"
-                   mc:Ignorable="d"       
-                   Title="MainWindow" Width="1300"
-                   GlowBrush="{DynamicResource AccentColorBrush}"
-                   DataContext="{Binding Source={StaticResource Locator}, Path=Main}" 
-                   BorderBrush="{DynamicResource WindowTitleColorBrush}" 
-                   BorderThickness="2" Height="800" >
+    xmlns:local="clr-namespace:FiscaliZi.Colinfo" 
+    xmlns:views="clr-namespace:FiscaliZi.Colinfo.Views"
+    xmlns:materialDesignMahApps="http://materialdesigninxaml.net/winfx/xaml/themes"
+    mc:Ignorable="d"       
+    Title="MainWindow" 
+    Width="1350" Height="800"
+    GlowBrush="{DynamicResource AccentColorBrush}"
+    DataContext="{Binding Source={StaticResource Locator}, Path=Main}" 
+    BorderBrush="{DynamicResource WindowTitleColorBrush}" 
+    BorderThickness="2" >
 
     <Window.Resources>
     </Window.Resources>
