--- a/FiscaliZi.Colinfo/App.xaml
+++ b/FiscaliZi.Colinfo/App.xaml
@@ -13,7 +13,7 @@
     <Application.Resources>
         
         <ResourceDictionary>
-            <vm:ViewModelLocator x:Key="Locator" 
+            <vm:ColinfoBootstrapper x:Key="Locator" 
                            d:IsDataSource="True" />
 
 
