--- a/FiscaliZi.Colinfo/App.xaml
+++ b/FiscaliZi.Colinfo/App.xaml
@@ -2,21 +2,17 @@
     x:Class="FiscaliZi.Colinfo.App" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="clr-namespace:FiscaliZi.Colinfo.ViewModel"
+    xmlns:vm="clr-namespace:FiscaliZi.Colinfo.Assert"
     xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ignore="http://www.galasoft.ch/ignore"
-    StartupUri="MainWindow.xaml"  
+    xmlns:ignore="http://www.galasoft.ch/ignore" 
     d1p1:Ignorable="d ignore">
 
     <Application.Resources>
         
         <ResourceDictionary>
-            <vm:ColinfoBootstrapper x:Key="Locator" 
-                           d:IsDataSource="True" />
-
-
+            
             <!-- MahApps Brushes -->
             <SolidColorBrush x:Key="HighlightBrush" Color="{DynamicResource Primary700}"/>
             <SolidColorBrush x:Key="AccentColorBrush" Color="{DynamicResource Primary500}"/>
@@ -38,6 +34,11 @@
             <Style TargetType="{x:Type dragablz:TabablzControl}" BasedOn="{StaticResource MaterialDesignTabablzControlStyle}" />
 
             <ResourceDictionary.MergedDictionaries>
+
+                <!-- Caliburn -->
+                <ResourceDictionary>
+                    <vm:ColinfoBootstrapper x:Key="bootstrapper"/>
+                </ResourceDictionary>
                 
                 <!-- MahApps -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
