--- a/FiscaliZi.Colinfo/Assert/FlyPedido.xaml
+++ b/FiscaliZi.Colinfo/Assert/FlyPedido.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="FiscaliZi.Colinfo.Views.FlyPedido"
+﻿<UserControl x:Class="FiscaliZi.Colinfo.Assert.FlyPedido"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:FiscaliZi.Colinfo.Views"
+             xmlns:local="clr-namespace:FiscaliZi.Colinfo.Assert"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
