--- a/FiscaliZi.Colinfo/Assert/MainView.xaml
+++ b/FiscaliZi.Colinfo/Assert/MainView.xaml
@@ -1,5 +1,5 @@
 ﻿<Metro:MetroWindow 
-    x:Class="FiscaliZi.Colinfo.MainWindow"                         
+    x:Class="FiscaliZi.Colinfo.Assert.MainView"                         
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                   
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"       
@@ -9,9 +9,10 @@
     xmlns:dockablz="clr-namespace:Dragablz.Dockablz;assembly=Dragablz"
     xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
     xmlns:local="clr-namespace:FiscaliZi.Colinfo" 
-    xmlns:views="clr-namespace:FiscaliZi.Colinfo.Views"
+    xmlns:Assert="clr-namespace:FiscaliZi.Colinfo.Assert"
+    xmlns:cal="http://www.caliburnproject.org"
     xmlns:materialDesignMahApps="http://materialdesigninxaml.net/winfx/xaml/themes"
-    mc:Ignorable="d"       
+    mc:Ignorable="d"
     Title="MainWindow" 
     Width="1350" Height="800"
     GlowBrush="{DynamicResource AccentColorBrush}"
@@ -28,17 +29,18 @@
                 Header="Items" 
                 materialDesignMahApps:FlyoutAssist.HeaderColorMode="Accent" 
                 Background="{DynamicResource AccentColorBrush}">
-                <views:FlyPedido />
+                <!--<Assert:FlyPedido />-->
             </Metro:Flyout>
         </Metro:FlyoutsControl>
     </Metro:MetroWindow.Flyouts>
 
-    <dockablz:Layout>
+    <wpf:DialogHost Identifier="RootDialog" SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
+        <dockablz:Layout>
         <dragablz:TabablzControl BorderThickness="0"
                                  Margin="0,-1,0,1" 
                                  FixedHeaderCount="2" >
             <TabItem Header="COLETA">
-                <views:Coleta Margin="8"/>
+                <Assert:ColetaView cal:View.Model="{Binding ColetaVM}" Margin="8"/>
             </TabItem>
             <TabItem Header="OPÇÕES">
                 <dragablz:TabablzControl FixedHeaderCount="2"  >
@@ -48,5 +50,7 @@
             </TabItem>
         </dragablz:TabablzControl>
     </dockablz:Layout>
+    </wpf:DialogHost>
+        
 
 </Metro:MetroWindow>
